<resources>
    <string name="app_name">GuauGuau</string>
    <string name="guauguau">GuauGuau</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="posts_fragment">Posts Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="resources">Resources</string>
    <string name="home">Home</string>
    <string name="dogs">Dogs</string>
    <string name="profile">Profile</string>
    <string name="post">Post</string>
    <string name="more">more</string>
    <string name="create_post">create post</string>

    <string name="about">About</string>
    <string name="edit_about">Edit About</string>
    <string name="edit_name">Edit Name</string>
    <string name="profile_activity">Activity</string>
    <string name="log_out">Log out</string>
    <string name="change_profile_pic">change profile pic</string>
    <string name="solved_posts">## solved posts</string>
    <string name="posts">## posts</string>
    <string name="number_of_posts_made">number of posts made</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_text">Don\'t have an account yet?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_post">Create new post.</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="signup">Sign Up!</string>
    <string name="create_an_account">Create one!</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="take_photo">Take photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="option">Option</string>
    <string name="select_an_option">Select an option…</string>
    <string name="profile_pic">Profile pic</string>
    <string name="accept">accept</string>
    <string name="user_name">user name</string>
    <string name="new_post">New Post</string>
    <string name="post_options">Post options</string>
    <string name="ok">OK</string>
    <string name="image_post">Image post</string>
    <string name="comments">Comments</string>
    <string name="location">Location</string>
    <string name="Photo">photo</string>
    <string name="my_location">Latitude: 123.123123
        Longitude: 123.123123</string>
    <string name="enable_location_message">Please, enable your location.</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="solve_post">Solve Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_confirmation">Are you sure to delete this post?</string>
    <string name="incorrect_email_password">Incorrect email or password</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="retry">Retry</string>
    <string name="name">Name</string>
    <string name="posts_could_not_be_loaded">Posts could not be loaded</string>
    <string name="couldn_t_load_posts">Couldn\'t load posts</string>
    <string name="no_results">No Results</string>
    <string name="add_comment">Add comment</string>
    <string name="user_created_message">user created</string>
    <string name="password_error_message">Passwords must match</string>
    <string name="email_error_message">Enter a correct email address</string>
    <string name="permissions_error_message">Error, permissions were not granted</string>
    <string name="mundo_patitas">Mundo Patitas</string>
    <string name="amigos_de_los_animales">Amigos de los animales</string>
    <string name="centro_antirrabico">Centro Antirrábico</string>
    <string name="compania_canina">Compañía Canina</string>
    <string name="post_deleted_message">Post deleted</string>
    <string name="post_solved_message">Post solved successfully</string>
    <string name="publish_comment">Publish comment</string>
    <string name="location_not_provided">Location not provided</string>
    <string name="post_author">Author</string>
    <string-array name="post_solve_options">
        <item name="op1">I haven\'t seen the dog in days</item>
        <item name="op2">I adopted the dog :)</item>
        <item name="op3">I got my dog back</item>
        <item name="op4">Other</item>
    </string-array>
</resources>