<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_view_profile_pic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Widget.GuauGuau.ShapeableImageView"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_change_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/change_profile_pic"
            android:src="@drawable/ic_baseline_camera"
            app:layout_constraintBottom_toBottomOf="@id/image_view_profile_pic"
            app:layout_constraintEnd_toEndOf="@id/image_view_profile_pic" />

        <TextView
            android:id="@+id/text_view_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:maxLines="1"
            android:text="@string/alfredo_estupinon"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toStartOf="@id/edit_name"
            app:layout_constraintStart_toStartOf="@id/ic_about"
            app:layout_constraintTop_toBottomOf="@id/image_view_profile_pic" />

        <ImageView
            android:id="@+id/edit_name"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:contentDescription="@string/edit_name"
            android:src="@drawable/ic_baseline_edit"
            app:layout_constraintBottom_toBottomOf="@id/text_view_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_view_name"
            app:tint="@color/blue_700" />

        <TextView
            android:id="@+id/text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/freddy_gmail_com"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintStart_toStartOf="@id/text_view_name"
            app:layout_constraintTop_toBottomOf="@id/text_view_name" />

        <ImageView
            android:id="@+id/ic_about"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_round_info"
            app:layout_constraintEnd_toStartOf="@id/about"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline4" />

        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintBottom_toBottomOf="@id/ic_about"
            app:layout_constraintEnd_toStartOf="@id/edit_about"
            app:layout_constraintStart_toEndOf="@id/ic_about"
            app:layout_constraintTop_toTopOf="@id/ic_about" />

        <ImageView
            android:id="@+id/edit_about"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/edit_about"
            android:src="@drawable/ic_baseline_edit"
            app:layout_constraintBottom_toBottomOf="@id/about"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/about"
            app:tint="@color/blue_700" />

        <TextView
            android:id="@+id/text_view_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="3"
            android:text="@string/lorem"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="@id/about"
            app:layout_constraintStart_toStartOf="@id/about"
            app:layout_constraintTop_toBottomOf="@id/ic_about" />

        <ImageView
            android:id="@+id/ic_activity"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_round_analytics"
            app:layout_constraintEnd_toStartOf="@id/activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_about" />

        <TextView
            android:id="@+id/activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_activity"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintBottom_toBottomOf="@id/ic_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ic_activity"
            app:layout_constraintTop_toTopOf="@id/ic_activity" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_posts"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/number_of_posts_made"
                android:src="@drawable/ic_baseline_article" />


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_num_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/posts"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintEnd_toEndOf="@id/card_view_posts"
            app:layout_constraintStart_toStartOf="@id/card_view_posts"
            app:layout_constraintTop_toBottomOf="@id/card_view_posts" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_solved_posts"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/activity">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:contentDescription="@string/solved_posts"
                android:src="@drawable/ic_baseline_check_circle_24" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_view_solved_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/solved_posts"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            app:layout_constraintEnd_toEndOf="@id/card_view_solved_posts"
            app:layout_constraintStart_toStartOf="@id/card_view_solved_posts"
            app:layout_constraintTop_toBottomOf="@id/card_view_solved_posts" />


        <Button
            android:id="@+id/button_log_out"
            style="@style/Widget.Guauguau.Button.OutlinedButton.SecondaryColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/log_out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_num_posts" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_view_name" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_view_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>